<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/nameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/input_layout">

            <TextView
                style="@style/label_style"
                android:labelFor="@id/name_edit_text"
                android:text="@string/label_name" />

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/edit_style.text"
                android:text="@={viewModel.shoe.name}"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/companyLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLayout"
            style="@style/input_layout">

            <TextView
                style="@style/label_style"
                android:labelFor="@id/company_edit_text"
                android:text="@string/label_company" />

            <EditText
                android:id="@+id/company_edit_text"
                style="@style/edit_style.text"
                android:text="@={viewModel.shoe.company}"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sizeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyLayout"
            style="@style/input_layout">

            <TextView
                style="@style/label_style"
                android:labelFor="@id/size_edit_text"
                android:text="@string/label_size" />

            <EditText
                android:id="@+id/size_edit_text"
                style="@style/edit_style.numberDecimal"
                android:text="@={`` + viewModel.shoe.size}"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeLayout"
            style="@style/input_layout">

            <TextView
                style="@style/label_style"
                android:labelFor="@id/description_edit_text"
                android:text="@string/label_description" />

            <EditText
                android:id="@+id/description_edit_text"
                style="@style/edit_style.text"
                android:text="@={viewModel.shoe.description}"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>